# hack-interview

./: .dockerignore  .env.example  Dockerfile  README.md  main.py  requirements.txt
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: cli.py  config.py  history.py  main.py  schemas.py  services.py
frontend/: .gitignore  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css  types.ts
frontend/src/components/: ContextPanel.tsx  HistoryPanel.tsx
frontend/src/hooks/: useRecorder.ts
src/: audio.py  gpt_query.py  gui.py  handlers.py
src/utils/: display.py
web_app/: README.md
web_app/backend/: .env.example  .gitignore  README.md  fastapi_app.py  pyproject.toml
web_app/backend/app/: cli.py  config.py  main.py  schemas.py  services.py
web_app/frontend/: .gitignore  package.json  pnpm-lock.yaml
web_app/frontend/src/: App.tsx  api.ts  styles.css  types.ts
web_app/frontend/src/components/: ContextPanel.tsx
web_app/frontend/src/hooks/: useRecorder.ts
