[project]
name = "interview-backend"
version = "0.1.0"
description = "FastAPI backend for the AI interview assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.3",
    "loguru>=0.7.2",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.5.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
]

[project.scripts]
fastapi_app = "app.cli:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
