[project]
name = "interview-backend"
version = "0.1.0"
description = "FastAPI backend for the AI interview assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "openai>=1.3.3",
    "loguru>=0.7.2",
    "pydantic>=2.7.0",
]

[project.scripts]
fastapi_app = "fastapi_app:main"

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
